[gd_scene load_steps=11 format=3 uid="uid://bgroajn55ubmp"]

[ext_resource type="Script" path="res://shop_phase/completed/panel_completed_artifact.gd" id="1_6yk4w"]
[ext_resource type="Texture2D" uid="uid://dwgvxe07vgcyt" path="res://shop_phase/ui/shine_effect.png" id="1_y52gj"]
[ext_resource type="Texture2D" uid="uid://peli1yheetc" path="res://shop_phase/completed/completed_base.svg" id="2_7jjq1"]
[ext_resource type="FontFile" uid="uid://cbxuvuh46x4co" path="res://ZeroCool.ttf" id="3_vrecv"]
[ext_resource type="PackedScene" uid="uid://ug72pfmoc1uy" path="res://shop_phase/inventario_vertical/inventory_artifact_box.tscn" id="4_g4dv0"]
[ext_resource type="PackedScene" uid="uid://daid81smvt7vy" path="res://ui/ok/butt_ok.tscn" id="5_1dx2y"]

[sub_resource type="Animation" id="Animation_f4hwb"]
resource_name = "open_panel"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mwe3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1o2j8"]
resource_name = "close_panel"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0adoo"]
_data = {
"RESET": SubResource("Animation_mwe3s"),
"close_panel": SubResource("Animation_1o2j8"),
"open_panel": SubResource("Animation_f4hwb")
}

[node name="PanelCompletedArtifact" type="CanvasLayer" node_paths=PackedStringArray("transitions", "artifact_box", "artifact_enchant", "charm_container")]
layer = 3
script = ExtResource("1_6yk4w")
transitions = NodePath("AnimationPlayer")
artifact_box = NodePath("Control/InventoryArtifactBox")
artifact_enchant = NodePath("Control/EnchantLabel")
charm_container = NodePath("Control/HBoxContainer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0adoo")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.52549, 0.52549, 0.52549, 0.486275)
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1400.0
offset_bottom = 1050.0

[node name="ShineEffect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = -0.008
anchor_right = 0.75
anchor_bottom = 0.278
offset_top = -45.378
offset_right = -0.00012207
offset_bottom = -45.678
texture = ExtResource("1_y52gj")
expand_mode = 1

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.076
anchor_right = 0.75
anchor_bottom = 0.924
offset_top = -41.8
offset_right = -0.00012207
offset_bottom = -42.2
texture = ExtResource("2_7jjq1")

[node name="TitleLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.28
anchor_right = 0.6
anchor_bottom = 0.366
offset_top = -39.0
offset_right = -6.10352e-05
offset_bottom = -39.3
theme_override_colors/font_color = Color(0.67451, 0.364706, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_vrecv")
theme_override_font_sizes/font_size = 28
text = "ARTEFACTO 
COMPLETADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryArtifactBox" parent="Control" instance=ExtResource("4_g4dv0")]
layout_mode = 0
offset_left = 585.0
offset_top = 370.0
offset_right = 815.0
offset_bottom = 600.0

[node name="EnchantLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 450.0
offset_top = 609.0
offset_right = 950.0
offset_bottom = 709.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vrecv")
theme_override_font_sizes/font_size = 24
text = "\"DESCRIPCIÓN MUY MOLONA Y PUEDE QUE UN TANTO LARGA
de tres lineasssssssssssssssssss\""
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.471
anchor_right = 0.934
anchor_bottom = 0.594
offset_left = 356.2
offset_top = 226.45
offset_right = -357.6
offset_bottom = 202.3
theme_override_constants/separation = 10
alignment = 1

[node name="InfoLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 819.0
offset_top = 952.0
offset_right = 1319.0
offset_bottom = 1052.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vrecv")
theme_override_font_sizes/font_size = 18
text = "¡Estás un paso más cerca de revelar el encanto de todos los artefactos!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CompeltedLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 789.0
offset_top = 955.0
offset_right = 1289.0
offset_bottom = 1055.0
theme_override_colors/font_color = Color(1, 0.858824, 0.14902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_vrecv")
theme_override_font_sizes/font_size = 26
text = "¡HAS DESCUBIERTO TODOS LOS ENCANTOS EN LA COLECCIÓN!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtOK" parent="Control" instance=ExtResource("5_1dx2y")]
layout_mode = 0
offset_left = 576.0
offset_top = 853.0
offset_right = 886.0
offset_bottom = 1005.0
scale = Vector2(0.8, 0.8)

[connection signal="pressed" from="Control/ButtOK" to="." method="_on_butt_ok_pressed"]
